# Semantic-Indoor-Navigator-with-Multimodal-AI-using-Google-DeepMind-s-Gemini-1.5

./: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
components/: IdeaGenerator.tsx  Layout.tsx  SemanticNavigator.tsx  SimulationLab.tsx
services/: gemini.ts
vlm_ws/: Dockerfile  docker_entrypoint.sh
vlm_ws/src/vlm_bridge/: README.md  package.xml  setup.cfg  setup.py
vlm_ws/src/vlm_bridge/launch/: vlm_launch.py
vlm_ws/src/vlm_bridge/vlm_bridge/: vlm_bridge_node.py  vlm_cli.py
